name:                   passphrase-me
version:                0.0.0
license:                MIT
license-file:           LICENSE
cabal-version:          >= 1.8
build-type:             Simple

library
    hs-source-dirs:     src
    exposed-modules:    Random
                      , WordList
                      , Application
    build-depends:      base >= 4 && < 5
                      , aeson
                      , bytestring
                      , connection
                      , containers
                      , http-conduit
                      , load-env
                      , text
                      , yesod-core
                      , yesod-form
    ghc-options:        -Wall

executable passphrase-me
    main-is:            main.hs
    build-depends:      base
                      , passphrase-me
                      , warp
    ghc-options:        -Wall -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    hs-source-dirs:     test
    ghc-options:        -Wall
    build-depends:      base
                      , passphrase-me
                      , hspec
                      , hspec-wai
                      , random
                      , yesod-core
